packages/cel/src/lib/gen/CELParser.ts
// Generated from packages/cel/src/lib/gen/CEL.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import CELListener from "./CELListener.js";
import CELVisitor from "./CELVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class CELParser extends Parser {
	public static readonly EQUALS = 1;
	public static readonly NOT_EQUALS = 2;
	public static readonly IN = 3;
	public static readonly LESS = 4;
	public static readonly LESS_EQUALS = 5;
	public static readonly GREATER_EQUALS = 6;
	public static readonly GREATER = 7;
	public static readonly LOGICAL_AND = 8;
	public static readonly LOGICAL_OR = 9;
	public static readonly LBRACKET = 10;
	public static readonly RPRACKET = 11;
	public static readonly LBRACE = 12;
	public static readonly RBRACE = 13;
	public static readonly LPAREN = 14;
	public static readonly RPAREN = 15;
	public static readonly DOT = 16;
	public static readonly COMMA = 17;
	public static readonly MINUS = 18;
	public static readonly EXCLAM = 19;
	public static readonly QUESTIONMARK = 20;
	public static readonly COLON = 21;
	public static readonly PLUS = 22;
	public static readonly STAR = 23;
	public static readonly SLASH = 24;
	public static readonly PERCENT = 25;
	public static readonly CEL_TRUE = 26;
	public static readonly CEL_FALSE = 27;
	public static readonly NUL = 28;
	public static readonly WHITESPACE = 29;
	public static readonly COMMENT = 30;
	public static readonly NUM_FLOAT = 31;
	public static readonly NUM_INT = 32;
	public static readonly NUM_UINT = 33;
	public static readonly STRING = 34;
	public static readonly BYTES = 35;
	public static readonly IDENTIFIER = 36;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_start = 0;
	public static readonly RULE_expr = 1;
	public static readonly RULE_conditionalOr = 2;
	public static readonly RULE_conditionalAnd = 3;
	public static readonly RULE_relation = 4;
	public static readonly RULE_calc = 5;
	public static readonly RULE_unary = 6;
	public static readonly RULE_member = 7;
	public static readonly RULE_primary = 8;
	public static readonly RULE_exprList = 9;
	public static readonly RULE_listInit = 10;
	public static readonly RULE_fieldInitializerList = 11;
	public static readonly RULE_optField = 12;
	public static readonly RULE_mapInitializerList = 13;
	public static readonly RULE_optExpr = 14;
	public static readonly RULE_literal = 15;
	public static readonly literalNames: (string | null)[] = [ null, "'=='", 
                                                            "'!='", "'in'", 
                                                            "'<'", "'<='", 
                                                            "'>='", "'>'", 
                                                            "'&&'", "'||'", 
                                                            "'['", "']'", 
                                                            "'{'", "'}'", 
                                                            "'('", "')'", 
                                                            "'.'", "','", 
                                                            "'-'", "'!'", 
                                                            "'?'", "':'", 
                                                            "'+'", "'*'", 
                                                            "'/'", "'%'", 
                                                            "'true'", "'false'", 
                                                            "'null'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "EQUALS", 
                                                             "NOT_EQUALS", 
                                                             "IN", "LESS", 
                                                             "LESS_EQUALS", 
                                                             "GREATER_EQUALS", 
                                                             "GREATER", 
                                                             "LOGICAL_AND", 
                                                             "LOGICAL_OR", 
                                                             "LBRACKET", 
                                                             "RPRACKET", 
                                                             "LBRACE", "RBRACE", 
                                                             "LPAREN", "RPAREN", 
                                                             "DOT", "COMMA", 
                                                             "MINUS", "EXCLAM", 
                                                             "QUESTIONMARK", 
                                                             "COLON", "PLUS", 
                                                             "STAR", "SLASH", 
                                                             "PERCENT", 
                                                             "CEL_TRUE", 
                                                             "CEL_FALSE", 
                                                             "NUL", "WHITESPACE", 
                                                             "COMMENT", 
                                                             "NUM_FLOAT", 
                                                             "NUM_INT", 
                                                             "NUM_UINT", 
                                                             "STRING", "BYTES", 
                                                             "IDENTIFIER" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "expr", "conditionalOr", "conditionalAnd", "relation", "calc", 
		"unary", "member", "primary", "exprList", "listInit", "fieldInitializerList", 
		"optField", "mapInitializerList", "optExpr", "literal",
	];
	public get grammarFileName(): string { return "CEL.g4"; }
	public get literalNames(): (string | null)[] { return CELParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return CELParser.symbolicNames; }
	public get ruleNames(): string[] { return CELParser.ruleNames; }
	public get serializedATN(): number[] { return CELParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, CELParser._ATN, CELParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let localctx: StartContext = new StartContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, CELParser.RULE_start);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 32;
			localctx._e = this.expr();
			this.state = 33;
			this.match(CELParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let localctx: ExprContext = new ExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, CELParser.RULE_expr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 35;
			localctx._e = this.conditionalOr();
			this.state = 41;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===20) {
				{
				this.state = 36;
				localctx._op = this.match(CELParser.QUESTIONMARK);
				this.state = 37;
				localctx._e1 = this.conditionalOr();
				this.state = 38;
				this.match(CELParser.COLON);
				this.state = 39;
				localctx._e2 = this.expr();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public conditionalOr(): ConditionalOrContext {
		let localctx: ConditionalOrContext = new ConditionalOrContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, CELParser.RULE_conditionalOr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 43;
			localctx._e = this.conditionalAnd();
			this.state = 48;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===9) {
				{
				{
				this.state = 44;
				localctx._s9 = this.match(CELParser.LOGICAL_OR);
				localctx._ops.push(localctx._s9);
				this.state = 45;
				localctx._conditionalAnd = this.conditionalAnd();
				localctx._e1.push(localctx._conditionalAnd);
				}
				}
				this.state = 50;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public conditionalAnd(): ConditionalAndContext {
		let localctx: ConditionalAndContext = new ConditionalAndContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, CELParser.RULE_conditionalAnd);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 51;
			localctx._e = this.relation(0);
			this.state = 56;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===8) {
				{
				{
				this.state = 52;
				localctx._s8 = this.match(CELParser.LOGICAL_AND);
				localctx._ops.push(localctx._s8);
				this.state = 53;
				localctx._relation = this.relation(0);
				localctx._e1.push(localctx._relation);
				}
				}
				this.state = 58;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public relation(): RelationContext;
	public relation(_p: number): RelationContext;
	// @RuleVersion(0)
	public relation(_p?: number): RelationContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: RelationContext = new RelationContext(this, this._ctx, _parentState);
		let _prevctx: RelationContext = localctx;
		let _startState: number = 8;
		this.enterRecursionRule(localctx, 8, CELParser.RULE_relation, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 60;
			this.calc(0);
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 67;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new RelationContext(this, _parentctx, _parentState);
					this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_relation);
					this.state = 62;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 63;
					localctx._op = this._input.LT(1);
					_la = this._input.LA(1);
					if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 254) !== 0))) {
					    localctx._op = this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					this.state = 64;
					this.relation(2);
					}
					}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}

	public calc(): CalcContext;
	public calc(_p: number): CalcContext;
	// @RuleVersion(0)
	public calc(_p?: number): CalcContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: CalcContext = new CalcContext(this, this._ctx, _parentState);
		let _prevctx: CalcContext = localctx;
		let _startState: number = 10;
		this.enterRecursionRule(localctx, 10, CELParser.RULE_calc, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 71;
			this.unary();
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 81;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 79;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
					case 1:
						{
						localctx = new CalcContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_calc);
						this.state = 73;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 74;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 58720256) !== 0))) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 75;
						this.calc(3);
						}
						break;
					case 2:
						{
						localctx = new CalcContext(this, _parentctx, _parentState);
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_calc);
						this.state = 76;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 77;
						localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if(!(_la===18 || _la===22)) {
						    localctx._op = this._errHandler.recoverInline(this);
						}
						else {
							this._errHandler.reportMatch(this);
						    this.consume();
						}
						this.state = 78;
						this.calc(2);
						}
						break;
					}
					}
				}
				this.state = 83;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public unary(): UnaryContext {
		let localctx: UnaryContext = new UnaryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, CELParser.RULE_unary);
		let _la: number;
		try {
			let _alt: number;
			this.state = 97;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				localctx = new MemberExprContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 84;
				this.member(0);
				}
				break;
			case 2:
				localctx = new LogicalNotContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 86;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 85;
					(localctx as LogicalNotContext)._s19 = this.match(CELParser.EXCLAM);
					(localctx as LogicalNotContext)._ops.push((localctx as LogicalNotContext)._s19);
					}
					}
					this.state = 88;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===19);
				this.state = 90;
				this.member(0);
				}
				break;
			case 3:
				localctx = new NegateContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 92;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 91;
						(localctx as NegateContext)._s18 = this.match(CELParser.MINUS);
						(localctx as NegateContext)._ops.push((localctx as NegateContext)._s18);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 94;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				this.state = 96;
				this.member(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public member(): MemberContext;
	public member(_p: number): MemberContext;
	// @RuleVersion(0)
	public member(_p?: number): MemberContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: MemberContext = new MemberContext(this, this._ctx, _parentState);
		let _prevctx: MemberContext = localctx;
		let _startState: number = 14;
		this.enterRecursionRule(localctx, 14, CELParser.RULE_member, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			localctx = new PrimaryExprContext(this, localctx);
			this._ctx = localctx;
			_prevctx = localctx;

			this.state = 100;
			this.primary();
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 126;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 13, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					this.state = 124;
					this._errHandler.sync(this);
					switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
					case 1:
						{
						localctx = new SelectContext(this, new MemberContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_member);
						this.state = 102;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 103;
						(localctx as SelectContext)._op = this.match(CELParser.DOT);
						this.state = 105;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la===20) {
							{
							this.state = 104;
							(localctx as SelectContext)._opt = this.match(CELParser.QUESTIONMARK);
							}
						}

						this.state = 107;
						(localctx as SelectContext)._id = this.match(CELParser.IDENTIFIER);
						}
						break;
					case 2:
						{
						localctx = new MemberCallContext(this, new MemberContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_member);
						this.state = 108;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 109;
						(localctx as MemberCallContext)._op = this.match(CELParser.DOT);
						this.state = 110;
						(localctx as MemberCallContext)._id = this.match(CELParser.IDENTIFIER);
						this.state = 111;
						(localctx as MemberCallContext)._open = this.match(CELParser.LPAREN);
						this.state = 113;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & 132580181) !== 0)) {
							{
							this.state = 112;
							(localctx as MemberCallContext)._args = this.exprList();
							}
						}

						this.state = 115;
						this.match(CELParser.RPAREN);
						}
						break;
					case 3:
						{
						localctx = new IndexContext(this, new MemberContext(this, _parentctx, _parentState));
						this.pushNewRecursionContext(localctx, _startState, CELParser.RULE_member);
						this.state = 116;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 117;
						(localctx as IndexContext)._op = this.match(CELParser.LBRACKET);
						this.state = 119;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la===20) {
							{
							this.state = 118;
							(localctx as IndexContext)._opt = this.match(CELParser.QUESTIONMARK);
							}
						}

						this.state = 121;
						(localctx as IndexContext)._index = this.expr();
						this.state = 122;
						this.match(CELParser.RPRACKET);
						}
						break;
					}
					}
				}
				this.state = 128;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 13, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public primary(): PrimaryContext {
		let localctx: PrimaryContext = new PrimaryContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, CELParser.RULE_primary);
		let _la: number;
		try {
			this.state = 180;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 25, this._ctx) ) {
			case 1:
				localctx = new IdentOrGlobalCallContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===16) {
					{
					this.state = 129;
					(localctx as IdentOrGlobalCallContext)._leadingDot = this.match(CELParser.DOT);
					}
				}

				this.state = 132;
				(localctx as IdentOrGlobalCallContext)._id = this.match(CELParser.IDENTIFIER);
				this.state = 138;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 16, this._ctx) ) {
				case 1:
					{
					this.state = 133;
					(localctx as IdentOrGlobalCallContext)._op = this.match(CELParser.LPAREN);
					this.state = 135;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & 132580181) !== 0)) {
						{
						this.state = 134;
						(localctx as IdentOrGlobalCallContext)._args = this.exprList();
						}
					}

					this.state = 137;
					this.match(CELParser.RPAREN);
					}
					break;
				}
				}
				break;
			case 2:
				localctx = new NestedContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 140;
				this.match(CELParser.LPAREN);
				this.state = 141;
				(localctx as NestedContext)._e = this.expr();
				this.state = 142;
				this.match(CELParser.RPAREN);
				}
				break;
			case 3:
				localctx = new CreateListContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 144;
				(localctx as CreateListContext)._op = this.match(CELParser.LBRACKET);
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & 132581205) !== 0)) {
					{
					this.state = 145;
					(localctx as CreateListContext)._elems = this.listInit();
					}
				}

				this.state = 149;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===17) {
					{
					this.state = 148;
					this.match(CELParser.COMMA);
					}
				}

				this.state = 151;
				this.match(CELParser.RPRACKET);
				}
				break;
			case 4:
				localctx = new CreateStructContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 152;
				(localctx as CreateStructContext)._op = this.match(CELParser.LBRACE);
				this.state = 154;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & 132581205) !== 0)) {
					{
					this.state = 153;
					(localctx as CreateStructContext)._entries = this.mapInitializerList();
					}
				}

				this.state = 157;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===17) {
					{
					this.state = 156;
					this.match(CELParser.COMMA);
					}
				}

				this.state = 159;
				this.match(CELParser.RBRACE);
				}
				break;
			case 5:
				localctx = new CreateMessageContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 161;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===16) {
					{
					this.state = 160;
					(localctx as CreateMessageContext)._leadingDot = this.match(CELParser.DOT);
					}
				}

				this.state = 163;
				(localctx as CreateMessageContext)._IDENTIFIER = this.match(CELParser.IDENTIFIER);
				(localctx as CreateMessageContext)._ids.push((localctx as CreateMessageContext)._IDENTIFIER);
				this.state = 168;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===16) {
					{
					{
					this.state = 164;
					(localctx as CreateMessageContext)._s16 = this.match(CELParser.DOT);
					(localctx as CreateMessageContext)._ops.push((localctx as CreateMessageContext)._s16);
					this.state = 165;
					(localctx as CreateMessageContext)._IDENTIFIER = this.match(CELParser.IDENTIFIER);
					(localctx as CreateMessageContext)._ids.push((localctx as CreateMessageContext)._IDENTIFIER);
					}
					}
					this.state = 170;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 171;
				(localctx as CreateMessageContext)._op = this.match(CELParser.LBRACE);
				this.state = 173;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===20 || _la===36) {
					{
					this.state = 172;
					(localctx as CreateMessageContext)._entries = this.fieldInitializerList();
					}
				}

				this.state = 176;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===17) {
					{
					this.state = 175;
					this.match(CELParser.COMMA);
					}
				}
